updated index file

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
             <ul>watermelon</ul>
             <ul>pineapple</ul>
             <ul>mango</ul>
+	    <ul>papaya</ul>
         </div>
     </body>
 </html>
